fixing the z-indexes

--- a/public/css/calendar.css
+++ b/public/css/calendar.css
@@ -21,6 +21,8 @@ body {
 }
 
 .sidebar-nav {
+    position: relative;
+    z-index: 2;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -142,7 +144,6 @@ button:hover {
     height: 86%;
     display: grid;
     grid-template: 1fr / 1fr 17fr;
-    border-radius: 5px;
     overflow: auto;
     scrollbar-width: thin;
     scrollbar-color: #E2ECEA  #FFFFFF;
